# cmake-docker-template

./: CMakeLists.txt  Dockerfile  Makefile
lib/: CMakeLists.txt  lib.hpp
src/: main.cpp
